Fixed text overflow bug
svn path=/trunk/release/; revision=148642

--- a/website/moonlight2/css/style.css
+++ b/website/moonlight2/css/style.css
@@ -126,7 +126,8 @@ h4:first-child {
 .splashimage { }
 
 #splash { 
-    min-height: 600px; 
+    min-height: 550px;
+    padding-bottom: 100px;
     overflow: hidden; 
     background: #000 url(../images/splash-bg1.jpg) no-repeat center bottom;
 }
